--- a/src/app/users/component/owner/owner.component.html
+++ b/src/app/users/component/owner/owner.component.html
@@ -1,82 +1,44 @@
-<!-- <div class="container ">
-  <div class="row justify-content-center">
-    <div class="four col-md-3 my-1"  (click)="pending()">
-      <div class="counter-box">
-        <span class="counter">2</span>
-        <p>إعلانات لم يتم الموافقه عليها بعد</p>
-      </div>
-    </div>
-    <div class="four col-md-3 my-1" (click)="rented()">
-      <div class="counter-box">
-        <i class="fa fa-group"></i>
-        <span class="counter">3</span>
-        <p>العقارات التى تم تاجيرها</p>
-      </div>
-    </div>
-    <div class="four col-md-3 my-1"  (click)="navigate()">
-      <div class="counter-box">
-        <i class="fa fa-shopping-cart"></i>
-        <span class="counter">2</span>
-        <p>لم يتم التاجير بعد</p>
-      </div>
-    </div>
-    <div class="text-center w-75 mt-5">
-      <button class="send" type="submit" routerLink="/addProperity">
-        اعلن معنا
-      </button>
-    </div>
-  </div>
-</div> -->
-
 <!-- <img src=""> -->
-<div class="container   gradient-form">
+<div class="container gradient-form">
   <div class="row g-0">
-    <div class="col-sm-12 ">
-      <a  routerLink="/addProperity" class="add col-sm-12 ">إضافة اعلان</a>
-
+    <div class="col-sm-12">
+      <a routerLink="/addProperity" class="add col-sm-12">إضافة اعلان</a>
     </div>
-    <div class="col-sm-12 ">
-
+    <div class="col-sm-12">
       <div class="col-sm-12">
         <div class="container m-0 w-100">
           <div class="row">
-            <div class="col-sm-12 p-3 backcolor-one col-md-3 dash" (click)="rented()">
-              <span >{{rentedAds}}</span>
+            <div
+              class="col-sm-12 p-3 backcolor-one col-md-3 dash"
+              (click)="rented()"
+            >
+              <span>{{ rentedAds }}</span>
               <p>العقارات المؤجرة</p>
             </div>
-            <div class="col-sm-12 p-3 backcolor-two col-md-3 dash " (click)="navigate()">
-              <span >2</span>
+            <div
+              class="col-sm-12 p-3 backcolor-two col-md-3 dash"
+              (click)="navigate()"
+            >
+              <span>{{ NotRented }}</span>
               <p>لم يتم التاجير بعد</p>
             </div>
-            <div class="col-sm-12 p-3 backcolor col-md-3 dash" (click)="pending()">
-              <span >{{pend}}</span>
+            <div
+              class="col-sm-12 p-3 backcolor col-md-3 dash"
+              (click)="pending()"
+            >
+              <span>{{ pend }}</span>
               <p>إعلانات لم يتم الموافقه عليها بعد</p>
             </div>
-            <div class="col-sm-12 p-3 backcolor-three col-md-3 dash">
-
-                <span >2</span>
+            <div
+              class="col-sm-12 p-3 backcolor-three col-md-3 dash"
+              (click)="payedRending()"
+            >
+              <span>2</span>
               <p>إعلانات</p>
-                <!-- <a routerLink="/addProperity" class="link-light">إضافة اعلان</a> -->
-
             </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-12">
-        <div class="container m-0 w-100">
-          <div class="row">
-            <!-- <div class="col-sm-12 p-3 backcolor-one col-md-6 dash" (click)="rented()">
-              <span class="counter">2</span>
-              <p>العقارات المؤجرة</p>
-            </div>
-            <div class="col-sm-12 p-3 backcolor-two col-md-6 dash " (click)="navigate()">
-              <span class="counter">2</span>
-              <p>لم يتم التاجير بعد</p>
-            </div> -->
           </div>
         </div>
       </div>
     </div>
-
   </div>
 </div>
