--- a/src/app/components/not-rented-yet/not-rented-yet.component.html
+++ b/src/app/components/not-rented-yet/not-rented-yet.component.html
@@ -3,12 +3,12 @@
     <mat-label>Filter</mat-label>
     <input matInput #search placeholder="search" (keyup)="findContact(search.value)" >
   </mat-form-field>
-  <div class="row w-100">
+  <div class="row w-100" *ngIf="length>0 else noData">
     <div class="col-sm-12">
       <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 col-sm-12 table text-center">
         <!-- Position Column -->
         <ng-container matColumnDef="الاعلان">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-6  h5 table-dark  "> الاعلان </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-6  h5 table-dark  p-3 "> الاعلان </th>
           <td mat-cell *matCellDef="let element" class="col-sm-6 ">
             <div class="card">
               <!-- <img src="{{}}" class="card-img-top" alt="..."> -->
@@ -32,12 +32,12 @@
 
 
         <ng-container matColumnDef="تعديل">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1 text-center table-dark h5" scope="row"> تعديل </th>
-          <td mat-cell *matCellDef="let element" class="col-sm-1"> <a class="btn btn-dark send" [routerLink]='["/editproperty",element.id]'> تعديل</a> </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1 text-center table-dark h5 p-3" scope="row"> تعديل </th>
+          <td mat-cell *matCellDef="let element" class="col-sm-1 pt-5"> <a class="btn btn-dark send" [routerLink]='["/editproperty",element.id]'> تعديل</a> </td>
         </ng-container>
         <ng-container matColumnDef="حذف">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1 table-dark  h5"> حذف </th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1 p-3  table-dark  h5"> حذف </th>
+          <td mat-cell *matCellDef="let element" class=" pt-5 ">
 
 
             <a class="btn btn-dark send" (click)="delete(element.id)"> حذف</a> </td>
