--- a/src/app/components/rented/rented.component.html
+++ b/src/app/components/rented/rented.component.html
@@ -1,15 +1,15 @@
-<div class="container w-100">
+<div class="container text-center">
   <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput #search placeholder="search" (keyup)="findContact(search.value)" >
   </mat-form-field>
-  <div class="row w-100">
+  <div class="row w-100" *ngIf="length>0 else noData">
     <div class="col-sm-12">
-      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 col-sm-12">
+      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 col-sm-12 table text-center">
         <!-- Position Column -->
         <ng-container matColumnDef="الاعلان">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm2"> الاعلان </th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-6  h5 table-dark  p-3 "> الاعلان </th>
+          <td mat-cell *matCellDef="let element" class="col-sm-6 ">
             <div class="card">
               <!-- <img src="{{}}" class="card-img-top" alt="..."> -->
               <div class="card-body">
@@ -32,12 +32,15 @@
 
 
         <ng-container matColumnDef="تعديل">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1"> تعديل </th>
-          <td mat-cell *matCellDef="let element"> <a class="btn btn-primary send" [routerLink]='["/editproperty",element.id]'> تعديل</a> </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1 text-center table-dark h5 p-3" scope="row"> تعديل </th>
+          <td mat-cell *matCellDef="let element" class="col-sm-1 pt-5"> <a class="btn btn-dark send" [routerLink]='["/editproperty",element.id]'> تعديل</a> </td>
         </ng-container>
         <ng-container matColumnDef="حذف">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1"> حذف </th>
-          <td mat-cell *matCellDef="let element"> <a class="btn btn-primary send" (click)="delete(element.id)"> حذف</a> </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1 p-3  table-dark  h5"> حذف </th>
+          <td mat-cell *matCellDef="let element" class=" pt-5 ">
+
+
+            <a class="btn btn-dark send" (click)="delete(element.id)"> حذف</a> </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displaycolumns"></tr>
@@ -53,3 +56,8 @@
 
   </div>
 </div>
+<ng-template #noData>
+  <div class="noData">
+  <p>لايوجد اعلانات مؤجرة </p>
+</div>
+</ng-template>
