--- a/src/app/admin/component/owners/owners.component.css
+++ b/src/app/admin/component/owners/owners.component.css
@@ -1,11 +1,11 @@
-.example-form {
+/* .example-form {
   min-width: 150px;
   max-width: 500px;
   width: 100%;
-}
+} */
 
 .example-full-width {
-  width: 100%;
+  width: 50%;
 }
  th.mat-header-cell{
   border: none;
