--- a/src/app/shared/component/footer/footer.component.html
+++ b/src/app/shared/component/footer/footer.component.html
@@ -8,16 +8,8 @@
     <div class="container p-1">
       <!--Grid row-->
       <div class="row mt-1">
-        <!--Grid column-->
-        <div class="col-lg-4 col-md-12 mb-1 mb-md-0">
-          <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-2 mx-auto" style="width: 150px; height: 150px;">
-            <img class="rounded-circle" [src]="followUsInfo.logo" height="100%" width="100%" alt="logo picture"
-                 loading="lazy" />
-          </div>
-          
-        </div>
-        <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-1 mb-md-0">
+        
+        <div class=" col-md-6 mb-1 mb-md-0">
           
           <div class="mt-2 m-auto text-center  justify-content-center align-items-center p-3">
             <!-- Facebook -->
@@ -34,7 +26,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-1 mb-md-0">
+        <div class="col-md-6 mb-1 mb-md-0">
 
           <ul class="fa-ul mt-4" style="margin-left: 1.65em;">
             
