--- a/src/app/shared/component/not-found/not-found.component.css
+++ b/src/app/shared/component/not-found/not-found.component.css
@@ -3,3 +3,9 @@ div{
     justify-content: center;
     align-items: center;
 }
+/* 
+.content{
+    width:80%;
+    background-color: chartreuse;
+    position: relative;
+} */
