--- a/src/app/admin/component/adver-requests/adver-requests.component.html
+++ b/src/app/admin/component/adver-requests/adver-requests.component.html
@@ -1,7 +1,7 @@
-<form class="example-form ">
+<form class="example-form">
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>بحث</mat-label>
-    <input matInput #name (keyup)="findByName(name)">
+    <input matInput placeholder="ادخل الاسم"  #name (keyup)="findByName(name)">
   </mat-form-field>
 </form>
 <div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm " *ngIf="length>0 else alter">
