--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,12 @@
-<div *ngIf="!loading">
+<div *ngIf="!loading" class="py-5" >
   <div class="container  mt-5 p-5 ">
     <div class="row  w-75 justify-content-center m-auto ">
       <div class="col d-flex justify-content-center">
         <mat-form-field appearance="fill">
           <mat-label>الموقع</mat-label>
-          <mat-select id="eman" (selectionChange)="getFilterLocation($event)">
-            <mat-option *ngFor="let location of cities" [value]="location.id">
+          <mat-select [disableOptionCentering]="true" id="eman" (selectionChange)="getFilterLocation($event)">
+            <mat-option value="all">الكل</mat-option>
+            <mat-option *ngFor="let location of allLocations" [value]="location.id">
               {{location.name}}
             </mat-option>
           </mat-select>
@@ -14,7 +15,8 @@
       <div class="col d-flex justify-content-center">
         <mat-form-field appearance="fill">
           <mat-label>النوع</mat-label>
-          <mat-select (selectionChange)="getFilterType($event)">
+          <mat-select [disableOptionCentering]="true" (selectionChange)="getFilterType($event)">
+            <mat-option value="all">الكل </mat-option>
             <mat-option value="apartment">شقه</mat-option>
             <mat-option value="room">غرفه</mat-option>
             <mat-option value="studio">استوديو</mat-option>
@@ -24,7 +26,8 @@
       <div class="col d-flex justify-content-center">
         <mat-form-field appearance="fill">
           <mat-label>عدد الغرف</mat-label>
-          <mat-select id="ddlFruits" (selectionChange)="getFilterBeds($event)">
+          <mat-select [disableOptionCentering]="true" id="ddlFruits" (selectionChange)="getFilterBeds($event)">
+            <mat-option value="all">الكل</mat-option>
             <mat-option value="1">1</mat-option>
             <mat-option value="2">2</mat-option>
             <mat-option value="3">3</mat-option>
@@ -40,16 +43,7 @@
         </mat-form-field>
       </div>
     </div>
-    <div class="row  w-75 justify-content-center m-auto ">
-
-      <div class=" col d-flex justify-content-center m-2" (click)="getBySearch()">
-        <button mat-raised-button>بحث <mat-icon class="field-icon">search</mat-icon> </button>
-      </div>
-      <div class="col d-flex justify-content-center m-2" (click)="deleteFilter()">
-        <button mat-raised-button>مسح<mat-icon class="field-icon">filter_alt</mat-icon> </button>
-      </div>
-
-    </div>
+   
 
   </div>
 
@@ -71,7 +65,6 @@
 
   </div>
 
-  <app-footer> </app-footer>
 
 </div>
 <div class="justify-content-center align-items-center" *ngIf="loading">
