--- a/src/app/shared/component/cart/cart.component.html
+++ b/src/app/shared/component/cart/cart.component.html
@@ -18,14 +18,14 @@
                 </div>
 
               </div>
-              <h3 class="mb-0">{{advertisment .title}}</h3>
-              <h3 class="mb-0">{{advertisment .price}}جنيه</h3>
+              <h3 class="mb-0 title">{{advertisment .title}}</h3>
+              <h3 class="mb-0 price">{{advertisment .price}}جنيه</h3>
               <div class="d-flex justify-content-between align-items-center ">
                 <small class="text-muted"> <span class="material-icons   ">location_on</span> {{advertisment.address}}</small>
               </div>
-              <div class=" mt-2">
+              <!-- <div class=" mt-2">
                 <button type="button" class="btn mx-1 btn-sm btn-outline-warning">تعديل</button>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
