--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,3 +15,16 @@ button:hover{
     background: #585858;
 
 }  
+
+.search{
+  height: 70vh;
+  background-image: url(../../assets/download.jpg);
+  object-position: center;
+  object-fit:contain;
+
+}
+.line{
+  height: 3px;
+  width: 80%;
+ background-color: #FE6F41;
+}
