--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="!loading" class="py-5" >
-  <div class="container  mt-5 p-5 ">
-    <div class="row  w-75 justify-content-center m-auto ">
-      <div class="col d-flex justify-content-center">
-        <mat-form-field appearance="fill">
+  <div class="container  mt-5 p-5 search d-flex justify-content-center align-items-center ">
+    <div class="row  w-75 justify-content-center m-auto   align-items-center">
+      <div class="col d-flex justify-content-center align-items-center  bg-white ">
+        <mat-form-field appearance="fill" class="mt-3 ">
           <mat-label>الموقع</mat-label>
           <mat-select [disableOptionCentering]="true" id="eman" (selectionChange)="getFilterLocation($event)">
             <mat-option value="all">الكل</mat-option>
@@ -12,8 +12,8 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col d-flex justify-content-center">
-        <mat-form-field appearance="fill">
+      <div class="col d-flex justify-content-center align-items-center  bg-white ">
+        <mat-form-field appearance="fill" class="mt-3">
           <mat-label>النوع</mat-label>
           <mat-select [disableOptionCentering]="true" (selectionChange)="getFilterType($event)">
             <mat-option value="all">الكل </mat-option>
@@ -23,8 +23,8 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col d-flex justify-content-center">
-        <mat-form-field appearance="fill">
+      <div class="col d-flex justify-content-center align-items-center   bg-white ">
+        <mat-form-field appearance="fill" class="mt-3">
           <mat-label>عدد الغرف</mat-label>
           <mat-select [disableOptionCentering]="true" id="ddlFruits" (selectionChange)="getFilterBeds($event)">
             <mat-option value="all">الكل</mat-option>
@@ -47,6 +47,9 @@
 
   </div>
 
+  <div class="line  mt-5 m-auto ">
+  </div>
+  <h2 class="text-center mt-3">الاعلانات </h2>
 
   <div class="album py-5 ">
     <div class="container">
@@ -65,9 +68,11 @@
 
   </div>
 
-
+  <app-footer> </app-footer>
 </div>
 <div class="justify-content-center align-items-center" *ngIf="loading">
   <mat-spinner class="text-center w-50  mt-5 pt-5 " style="top: 30px;"></mat-spinner>
 
 </div>
+
+
