--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,12 +13,17 @@
          <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item" *ngIf="!isLogin">
-              <a class="nav-link " aria-current="page" routerLink="home">الصفحة الرئيسية</a>
+              <a class="nav-link " aria-current="page" routerLink="home">الصفحه الرئيسيه</a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link "*ngIf="!isLogin" aria-current="page" routerLink="about">التعريف</a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link "*ngIf="!isLogin" aria-current="page" routerLink="about">تواصل معنا</a>
+            </li>
+            
             <li class="nav-item" *ngIf="isLogin">
               <a class="nav-link "><mat-icon matBadge="15"  matBadgeColor="warn">notifications</mat-icon></a>
             </li>
