--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,3 @@
-
 <mat-toolbar class=" fixed-top">
 
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top shadow ">
@@ -13,15 +12,15 @@
          <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item" *ngIf="!isLogin">
-              <a class="nav-link " aria-current="page" routerLink="home">الصفحه الرئيسيه</a>
+              <a class="nav-link " aria-current="page" routerLink="/home">الصفحه الرئيسيه</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link "*ngIf="!isLogin" aria-current="page" routerLink="about">التعريف</a>
+              <a class="nav-link "*ngIf="!isLogin" aria-current="page" routerLink="/about">التعريف</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link "*ngIf="!isLogin" aria-current="page" routerLink="about">تواصل معنا</a>
+              <a class="nav-link "*ngIf="!isLogin" aria-current="page" routerLink="/about">تواصل معنا</a>
             </li>
             
             <li class="nav-item" *ngIf="isLogin">
