--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!loading" class="py-5" >
+<div *ngIf="!loading"  >
   <div class="container  mt-5 p-5 search d-flex justify-content-center align-items-center ">
     <div class="row  w-75 justify-content-center m-auto   align-items-center">
       <div class="col d-flex justify-content-center align-items-center  bg-white ">
